--- a/configs/dshape.yaml
+++ b/configs/dshape.yaml
@@ -1,4 +1,3 @@
-#  TODO: fsq has to be fixed yet!
 equilibrium:
   _target_: grad-shafranov
   p:
@@ -17,15 +16,15 @@ equilibrium:
     - -0.03307103
   Rb: [3.51, 1.0, 0.106]
   Zb: [0, 1.47, -0.16]
-  Ra: 3.71270844
+  Ra: 3.51
   Za: 0.0
   psi_0: -0.665
   wout_path: data/wout_DSHAPE.nc
   is_solovev: false
 
 seed: 42
-nepochs: 200
-nsteps: 1
+max_epochs: 200
+nbatches: 1
 log_every_n_steps: 10
 update_axis_every_n_epochs: 20
 learning_rate: 0.1
